--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Compra Bebidas</title>
+  <title>Compra Bebidas - Snaxitos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="../css/estilos.css" />
 </head>
@@ -23,9 +23,10 @@
     </div>
   </header>
 
-  <main class="container my-5">
+  <main class="container my-5 bebidas-page">
     <section class="productos mt-5">
-      <h2 class="text-center mb-4">Nuestras Bebidas</h2>
+      <h2 class="text-center mb-4">Bebidas Refrescantes</h2>
+      <p class="text-center mb-4">Perfectas para acompañar tus snacks. Refrescate con nuestras opciones.</p>
       <div class="contenedor-cards">
         <div class="card h-100 text-center">
           <img src="../imgs/aguaVillavicencio.jpg" alt="Agua Villavicencio" />
@@ -38,7 +39,7 @@
         <div class="card h-100 text-center">
           <img src="../imgs/jugoCitric.jpg" alt="Jugo de Naranja Citric" />
           <div class="card-body">
-            <h5 class="card-title">Jugo de Naranja Citric</h5>
+            <h5 class="card-title">Jugo Citric</h5>
             <p class="precio">$950</p>
             <button class="btn btn-warning">Comprar</button>
           </div>
