--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contáctanos</title>
+  <title>Contáctanos - Snaxitos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/estilos.css">
 </head>
@@ -29,6 +29,7 @@
     <div class="text-center mb-4">
       <p><strong>Teléfono:</strong> +54 9 11 2233 4455</p>
       <p><strong>Mail:</strong> snaxitos@gmail.com</p>
+      <p><strong>Dirección:</strong> Av. Siempre Viva 742, Buenos Aires, Argentina</p>
     </div>
 
     <div class="row justify-content-center">
