--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -1,44 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FAQs</title>
-    <link rel="stylesheet" href="../css/estilos.css">
-  </head>
-  <body>
-    <header>
-      <div class="contenedor-header">
-      <img src="/imgs/snaxitosLogo.png" alt="Snaxitos" class="logo">
-        <nav>
-            <ul class="navegacion">
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="../pages/snacks.html">Snacks</a></li>
-            <li><a href="../pages/bebidas.html">Bebidas</a></li>
-            <li><a href="../pages/contacto.html">Contacto</a></li>
-            <li><a href="../pages/faqs.html">FAQs</a></li>
-            </ul>
-        </nav>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FAQs - Snaxitos</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../css/estilos.css" />
+</head>
+<body>
+  <header class="bg-white border-bottom border-warning py-3">
+    <div class="container d-flex justify-content-between align-items-center">
+      <img src="../imgs/snaxitosLogo.png" alt="Snaxitos" class="logo" width="150" />
+      <nav>
+        <ul class="nav">
+          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="../index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./snacks.html">Snacks</a></li>
+          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./bebidas.html">Bebidas</a></li>
+          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./faqs.html">FAQs</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container my-5">
+    <h1 class="text-center mb-4">Preguntas Frecuentes</h1>
+
+    <div class="accordion" id="faqAccordion">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+            ¿Hacen envíos al exterior?
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Por el momento solo realizamos envíos dentro de Argentina. Estamos trabajando para llegar a otros países próximamente.
+          </div>
+        </div>
       </div>
-    </header>
 
-  <h1>Preguntas que nos hacen frecuentemente.</h1>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
+            ¿Cómo puedo trabajar con ustedes?
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Podés enviarnos tu CV a nuestro correo electrónico o completar el formulario de contacto. Siempre estamos buscando nuevos talentos.
+          </div>
+        </div>
+      </div>
 
-  <h2>¿Hacen envios al exterior?</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore fugit reprehenderit nam deserunt dolores minima totam culpa voluptates sint, iste laborum eum neque ipsam odio commodi iusto rerum laboriosam voluptatibus!</p>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree">
+            ¿Qué métodos de pago aceptan?
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Aceptamos tarjetas de crédito, débito, transferencias bancarias y pagos a través de plataformas digitales como MercadoPago.
+          </div>
+        </div>
+      </div>
 
-  <h2>¿Como puedo hacer para trabajar con ustedes?</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae vero amet libero dolor praesentium, in tempora architecto, facilis cumque suscipit sint dolores quod nemo pariatur. Quo ratione nesciunt tempora vero.</p>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingFour">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour">
+            ¿Cómo puedo dejar mi feedback?
+          </button>
+        </h2>
+        <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Podés enviarnos tu opinión desde el formulario de contacto o dejar una reseña en nuestras redes sociales. ¡Tu opinión nos ayuda a mejorar!
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 
-  <h2>¿Que metodos de pago aceptan?</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ratione rerum aut? Rem excepturi obcaecati cum doloremque. Eius fugiat distinctio praesentium pariatur, nesciunt asperiores corporis. Inventore nemo quo quis ipsa!</p>
-
-  <h2>¿Como puedo dejar mi feedback?</h2>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis, obcaecati iure accusantium cumque velit possimus assumenda fugit eum natus provident suscipit culpa modi! Unde nulla, repudiandae ex corrupti reprehenderit est.</p>
-  
-  <footer>
-    <p>Copyright Snaxitos | 2025. Todos los derechos reservados.</p>
+  <footer class="bg-light text-center py-3 mt-5">
+    <p class="mb-0">&copy; Snaxitos | 2025. Todos los derechos reservados.</p>
   </footer>
 
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
