--- a/pages/snacks.html
+++ b/pages/snacks.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Compra Snacks</title>
+  <title>Compra Snacks - Snaxitos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="../css/estilos.css" />
 </head>
@@ -23,9 +23,10 @@
     </div>
   </header>
 
-  <main class="container my-5">
+  <main class="container my-5 snacks-page">
     <section class="productos mt-5">
-      <h2 class="text-center mb-4">Nuestros Snacks</h2>
+      <h2 class="text-center mb-4">Snacks para Todos los Gustos</h2>
+      <p class="text-center mb-4">Desde dulces hasta salados, tenemos el snack ideal para vos. ¡Probá algo nuevo hoy!</p>
       <div class="contenedor-cards">
         <div class="card h-100 text-center">
           <img src="../imgs/oraleNachos.jpg" alt="Nachos Orale" />
@@ -36,9 +37,9 @@
           </div>
         </div>
         <div class="card h-100 text-center">
-          <img src="../imgs/chocoArroz.jpg" alt="Barra de arroz" />
+          <img src="../imgs/chocoArroz.jpg" alt="Barra de arroz con chocolate" />
           <div class="card-body">
-            <h5 class="card-title">Barra de arroz</h5>
+            <h5 class="card-title">Choco Arroz</h5>
             <p class="precio">$1000</p>
             <button class="btn btn-warning">Comprar</button>
           </div>
